@@ -1,4 +1,4 @@
-MANIFEST for ded, version t19951106
+MANIFEST for ded, version t19951127
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 COPYING                         copyright notice for DED
@@ -13,6 +13,7 @@ src                             subdirectory
 src/Makefile                    makefile for src-directory
 src/README                      to-do list for DED
 src/boxchars.c                  encapsulate knowledge of box-characters
+src/ccodes.rc                   sample $HOME/.dir_colors using ANSI numeric coding
 src/ded.c                       main program of DED
 src/ded.h                       common definitions of DED
 src/ded.hlp                     help-file for DED
